--- a/package.json
+++ b/package.json
@@ -6,22 +6,22 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "postcss": "^8.4.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "postcss": "^8.4.20",
     "react-icons": "^4.7.1",
     "react-markdown": "^8.0.4",
     "react-router-dom": "^6.5.0",
+    "react-scripts": "5.0.1",
     "tailwindcss": "^3.2.4",
     "uuid": "^9.0.0",
-    "xrpl": "^2.8.0-beta.0",
+    "web-vitals": "^2.1.4",
+    "xrpl": "^2.8.1",
     "xumm": "github:XRPL-Labs/Xumm-Universal-SDK#43eb21f43d683d748af55039753abb4fa62bcf2e",
     "xumm-js-pkce": "^1.0.0",
     "xumm-oauth2-pkce": "^2.5.5",
     "xumm-sdk": "^1.7.0",
-    "xumm-xapp-sdk": "^1.4.3",
-    "web-vitals": "^2.1.4"
+    "xumm-xapp-sdk": "^1.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,7 +30,6 @@
     "eject": "react-scripts eject",
     "serve-local": "bash ./scripts/create-deployment-json.sh local && cp ./environment/deployment.json ./src/. && npm run build && npm start",
     "deploy-prd": "bash ./scripts/create-deployment-json.sh prd && cp ./environment/deployment.json ./src/. && npm run build && bash ./scripts/deploy.sh prd"
-
   },
   "eslintConfig": {
     "extends": [
